# guesswork

./: .gitignore  INSTALL  LICENSE  guesswork-base.cabal  guesswork.cabal  reckon-base.cabal
examples/: data1_test.scaled  knn_prehandled_data.hs  knn_train_estimator.hs  testers.hs
src/: Guesswork.hs  Reckon.hs
src/Guesswork/: Analyze.hs  Arrange.hs  Estimate.hs  Extraction.hs  Flow.hs  IO.hs  Transform.hs  Types.hs
src/Guesswork/Arrange/: RandomShuffle.hs
src/Guesswork/Estimate/: KNN.hs  Linear.hs  SVR.hs
src/Guesswork/Export/: Print.hs  WriteFiles.hs
src/Guesswork/Import/: CSVUtils.hs
src/Guesswork/Math/: Statistics.hs
src/Guesswork/Transform/: PCA.hs  Scale.hs
src/Reckon/: Analyze.hs  Arrange.hs  Estimate.hs  Estimation.hs  Extraction.hs  Log.hs  Separation.hs  Transform.hs  Types.hs
src/Reckon/Arrange/: Separation.hs
src/Reckon/Estimate/: KNN.hs
src/Reckon/Estimation/: KNN.hs
src/Reckon/Export/: Print.hs
src/Reckon/Files/: LibSvmFiles.hs  Parsers.hs
src/Reckon/Import/: ReadFiles.hs
src/Reckon/Math/: Statistics.hs
src/Reckon/Separation/: KMeans.hs
src/Reckon/Statistics/: Measures.hs
src/Reckon/Transform/: PCA.hs  Scale.hs  Scaler.hs
tests/: IOTests.hs  RegressionTests.hs  RegressorTests.hs  TestSetup.hs  all-tests.hs  data1_train.scaled  main.hs
