Name:          guesswork-base
Version:       0.0.1
Synopsis:      A framework for remote sensing.
Description:   A framework for remote sensing. Library is intended to be
  versatile and supports also other use cases than remote sensing.
License:       MIT
License-file:  LICENSE
Author:        Heikki Salo
Maintainer:    heikki.ao.salo@iki.fi
Category:      Math
Build-type:    Simple

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2

Library
    hs-source-dirs: src

    Build-depends: base
                 , array
                 , vector
                 , filepath
                 , split
                 , text
                 , attoparsec
--                 , hstatistics
--                 , hmatrix-gsl-stats
                 , attoparsec
                 , mtl
                 , hmatrix

    Exposed-modules: Guesswork.Transform
                   , Guesswork.Math.Statistics
                   , Guesswork.Arrange
                   , Guesswork.Analyze
                   , Guesswork.Transform.Scale
                   , Guesswork.Estimate
                   , Guesswork.Export.Print
                   , Guesswork.Import.IO
                   , Guesswork
                   , Guesswork.Types

--Test-Suite math
--    type:

--Executable reckoner
--    hs-source-dirs: src
--    main-is:  main.hs
----  extra-libraries:
----      gslcblas
