Name:          guesswork
Version:       0.1.0
Synopsis:      A framework for estimation/classification..
Description:   A framework for estimation/classification.
License:       MIT
License-file:  LICENSE
Author:        Heikki Salo
Maintainer:    heikki.ao.salo@iki.fi
Category:      Math
Build-type:    Simple

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2

Library
    hs-source-dirs: src

    Build-depends: base
                 , array
                 , vector
                 , filepath
                 , split
                 , text
                 , attoparsec
                 , mtl
                 , hmatrix

    Exposed-modules: Guesswork.Transform
                   , Guesswork.Math.Statistics
                   , Guesswork.Arrange
                   , Guesswork.Analyze
                   , Guesswork.Transform.Scale
                   , Guesswork.Estimate
                   , Guesswork.Estimate.KNN
                   , Guesswork.Estimate.Linear
                   , Guesswork.Export.Print
                   , Guesswork.IO
                   , Guesswork.Types
                   , Guesswork.Flow
                   , Guesswork
