Name:          guesswork
Version:       0.2.0
Synopsis:      A framework for estimation.
Description:   A framework for estimation.
License:       BSD3
License-file:  LICENSE
Author:        Heikki Salo
Maintainer:    heikki.ao.salo@iki.fi
Category:      Math
Build-type:    Simple

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.8

Library
    hs-source-dirs: src

    Build-depends: base
                 , array
                 , vector
                 , filepath
                 , split
                 , text
                 , attoparsec
                 , mtl
                 , random
                 , kmeans-vector >= 0.2
                 , hmatrix
                 , svm-simple

    Exposed-modules: Guesswork.Transform
                   , Guesswork.Math.Statistics
                   , Guesswork.Arrange
                   , Guesswork.Arrange.RandomShuffle
                   , Guesswork.Analyze
                   , Guesswork.Transform.Scale
                   , Guesswork.Estimate
                   , Guesswork.Estimate.KNN
                   , Guesswork.Estimate.SVR
                   , Guesswork.Estimate.Linear
                   , Guesswork.Import.CSVUtils
                   , Guesswork.Export.Print
                   , Guesswork.IO
                   , Guesswork.Types
                   , Guesswork.Flow
                   , Guesswork

Test-Suite all-tests 
    hs-source-dirs: tests
    type:           exitcode-stdio-1.0
    main-is:        all-tests.hs

    build-depends: base
                 , guesswork
